# ai-hackathon-4th

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  justfile  package.json
.github/: CODEOWNERS  (+3 more)
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 3b5d4f9146f0_initial_migration_travelplan_.py
backend/app/application/: __init__.py
backend/app/application/dto/: reflection_dto.py  travel_guide_dto.py  travel_plan_dto.py
backend/app/application/ports/: ai_service.py  image_generation_service.py  spot_image_job_repository.py  spot_image_task_dispatcher.py  storage_service.py
backend/app/application/use_cases/: analyze_photos.py  create_travel_plan.py  delete_travel_plan.py  generate_reflection.py  generate_spot_images.py  generate_travel_guide.py  get_travel_plan.py  travel_plan_helpers.py  update_travel_plan.py
backend/app/application/workers/: __init__.py  spot_image_worker.py
backend/app/config/: logging.py  settings.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py  firebase_admin.py
backend/app/interfaces/: __init__.py
backend/app/prompts/: __init__.py
backend/scripts/: generate_openapi.py
backend/tests/: conftest.py  test_main.py
backend/tests/integration/: __init__.py  test_api_integration_flow.py  test_reflection_api.py  test_travel_guide_api.py  test_travel_plan_api.py
backend/tests/property/: test_content_properties.py  test_logging_properties.py
(+370 files in other folders)
